fix(file-finder): Replaced logic to match the way previous versions of detect worked even though it is technically not correct.(Fixes IDETECT-1953)